# g1m

./: .g1m_node_id  .gitattributes  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  README.md  g1m.db  git.txt  licence.md  memo.txt  package-lock.json  package.json  render.yaml  server.js  start_g1m.sh  verify_all_systems.sh
Flask/: app.py  post.cs  render.yaml  requirements.txt
G1M/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  AssistantCoreSDKEditor.csproj  AssistantCoreSDKRuntime.csproj  Facebook.Wit.Dictation.Editor.csproj  Facebook.Wit.Dictation.csproj  G1M.sln  Meta.Voice.Hub.Editor.csproj  Meta.Voice.Hub.Runtime.csproj  Meta.Voice.Samples.BuiltInTimer.csproj  Meta.Voice.Samples.Chess.csproj  Meta.Voice.Samples.Dictation.csproj  Meta.Voice.Samples.LightTraits.csproj  Meta.Voice.Samples.LiveUnderstanding.csproj  Meta.Voice.Samples.Shapes.csproj  Meta.Voice.Samples.ShapesConduit.csproj  Meta.Voice.Samples.TTSVoices.csproj  Meta.Voice.VSDKHub.Editor.csproj  Meta.VoiceSDK.Mic.Common.csproj  Meta.VoiceSDK.Mic.Other.csproj  Meta.VoiceSDK.Mic.WebGL.csproj  Meta.WitAI.Lib.Editor.csproj  Meta.WitAi.Conduit.Editor.csproj  Meta.WitAi.Conduit.csproj  Meta.WitAi.Editor.csproj  Meta.WitAi.Lib.csproj  (+30 more)
frontend/: .gitignore  Cargo.toml  DEVELOPMENT.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scratch/: check_braces.cjs  check_brackets_line.cjs
frontend/src/: App.css  App.tsx  MainApp.tsx  db.ts  index.css  lib.rs  main.tsx  systemprompt_en.md  systemprompt_ja.md
g1m-node/: Cargo.toml
g1m-node/src/: db.rs  main.rs  p2p.rs  web.rs
(+90 files in other folders)
