[package]
name = "g1m-wasm"
version = "0.1.0"
edition = "2021"
description = "G1:M Robot Control Logic in WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# ブラウザのコンソールへパニック情報を出力するためのユーティリティ
console_error_panic_hook = { version = "0.1.7", optional = true }